--- a/MessageWeb.Tests/MessageWeb.Tests.csproj
+++ b/MessageWeb.Tests/MessageWeb.Tests.csproj
@@ -9,8 +9,8 @@
     <ProjectGuid>{63CC86AD-9D81-451F-A68A-96946E47E601}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MessageWeb.Tests</RootNamespace>
-    <AssemblyName>MessageWeb.Tests</AssemblyName>
+    <RootNamespace>Possible.MessageWeb.Tests</RootNamespace>
+    <AssemblyName>Possible.MessageWeb.Tests</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{3AC096D0-A1C2-E12C-1390-A8335801FDAB};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
