--- a/MessageWeb/Web.config
+++ b/MessageWeb/Web.config
@@ -17,6 +17,18 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <system.net>
+    <mailSettings>
+      <smtp from="miklos.kanyo@gmail.com">
+        <network 
+          host="smtp.gmail.com" 
+          userName="miklos.kanyo@gmail.com" 
+          password="xxxxxxxxx" 
+          port="587" 
+          enableSsl="true" />
+      </smtp>
+    </mailSettings>
+  </system.net>
   <system.web>
     <authentication mode="None" />
     <compilation debug="true" targetFramework="4.7.2" />
