Implemented messages list and users list. Added initial version of new message

--- a/MessageWeb/Web.config
+++ b/MessageWeb/Web.config
@@ -20,12 +20,7 @@
   <system.net>
     <mailSettings>
       <smtp from="miklos.kanyo@gmail.com">
-        <network 
-          host="smtp.gmail.com" 
-          userName="miklos.kanyo@gmail.com" 
-          password="xxxxxxxxx" 
-          port="587" 
-          enableSsl="true" />
+        <network host="smtp.gmail.com" userName="miklos.kanyo@gmail.com" password="xxxxxxxxx" port="587" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
